--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # dependencies 
-/node_modules
+node_modules/
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
 /.pnp
 .pnp.js
 
