--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
+    "js-yaml": "3.13.1",
     "live-server": "^1.2.1",
     "node-sass": "4.13.1",
     "normalize.css": "7.0.0",
@@ -32,6 +33,6 @@
     "style-loader": "0.18.2",
     "validator": "8.0.0",
     "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack-dev-server": "3.1.11"
   }
 }
